--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Typescript, The Simple List</title>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
   </head>
   <main>
     <div class="container">
       <h1 class="app-title">todos</h1>
       <ul class="todo-list todo-list"></ul>
+      <div class="empty-state">
+        <svg class="checklist-icon"><use href="#checklist-icon"></use></svg>
+        <h2 class="empty-state__title">Add your first todo</h2>
+        <p class="empty-state__description">What do you want to get done today?</p>
+      </div>
 
       <form class="form">
         <input
           autofocus
           type="text"
           aria-label="Enter a new todo item"
-          placeholder="E.g. Build a web app"
+          placeholder="Build a web app"
           class="todo-input"
         />
       </form>
